--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   "author": "Florian Körner <contact@florian-koerner.com>",
   "license": "MIT",
   "dependencies": {
-    "@dicebear/avatars": "^4.5.0",
-    "@dicebear/avatars-avataaars-sprites": "^4.5.0",
-    "@dicebear/avatars-bottts-sprites": "^4.5.0",
-    "@dicebear/avatars-female-sprites": "^4.5.0",
-    "@dicebear/avatars-gridy-sprites": "^4.5.0",
-    "@dicebear/avatars-human-sprites": "^4.5.0",
-    "@dicebear/avatars-identicon-sprites": "^4.5.0",
-    "@dicebear/avatars-initials-sprites": "^4.5.0",
-    "@dicebear/avatars-jdenticon-sprites": "^4.5.0",
-    "@dicebear/avatars-male-sprites": "^4.5.0",
+    "@dicebear/avatars": "~4.5.0",
+    "@dicebear/avatars-avataaars-sprites": "~4.5.0",
+    "@dicebear/avatars-bottts-sprites": "~4.5.0",
+    "@dicebear/avatars-female-sprites": "~4.5.0",
+    "@dicebear/avatars-gridy-sprites": "~4.5.0",
+    "@dicebear/avatars-human-sprites": "~4.5.0",
+    "@dicebear/avatars-identicon-sprites": "~4.5.0",
+    "@dicebear/avatars-initials-sprites": "~4.5.0",
+    "@dicebear/avatars-jdenticon-sprites": "~4.5.0",
+    "@dicebear/avatars-male-sprites": "~4.5.0",
     "@types/yup": "^0.29.9",
     "qs": "^6.9.4",
     "yup": "^0.31.0"
