--- a/package.json
+++ b/package.json
@@ -1,41 +1,25 @@
 {
-  "name": "@dicebear/avatars-serverless",
-  "version": "4.5.0",
-  "description": "DiceBear Avatars API build on Cloudflare Workers",
+  "name": "@dicebear/avatars-api",
   "private": true,
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "deploy": "serverless deploy"
+    "start": "ts-node src/index.ts"
   },
   "author": "Florian Körner <contact@florian-koerner.com>",
   "license": "MIT",
   "dependencies": {
-    "@dicebear/avatars": "~4.5.0",
-    "@dicebear/avatars-avataaars-sprites": "~4.5.0",
-    "@dicebear/avatars-bottts-sprites": "~4.5.0",
-    "@dicebear/avatars-female-sprites": "~4.5.0",
-    "@dicebear/avatars-gridy-sprites": "~4.5.0",
-    "@dicebear/avatars-human-sprites": "~4.5.0",
-    "@dicebear/avatars-identicon-sprites": "~4.5.0",
-    "@dicebear/avatars-initials-sprites": "~4.5.0",
-    "@dicebear/avatars-jdenticon-sprites": "~4.5.0",
-    "@dicebear/avatars-male-sprites": "~4.5.0",
-    "@types/yup": "^0.29.9",
+    "@dicebear/avatars-api-4.4": "*",
+    "@dicebear/avatars-api-4.5": "*",
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "qs": "^6.9.4",
-    "tiny-request-router": "^1.2.2",
-    "ts-node": "^9.1.1",
-    "yup": "^0.31.0"
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/qs": "^6.9.5",
     "prettier": "^2.2.1",
-    "serverless": "^2.13.0",
-    "serverless-cloudflare-workers": "^1.2.0",
-    "serverless-dotenv-plugin": "^3.1.0",
-    "ts-loader": "^8.0.11",
     "typescript": "^4.1.2"
+  },
+  "workspaces": {
+    "packages": ["versions/*"],
+    "nohoist": ["**/@dicebear/avatars*"]
   }
 }
