--- a/versions/4.5/package.json
+++ b/versions/4.5/package.json
@@ -16,10 +16,12 @@
     "@dicebear/avatars-jdenticon-sprites": "~4.5.0",
     "@dicebear/avatars-male-sprites": "~4.5.0",
     "express": "^4.17.1",
+    "sharp": "^0.27.1",
     "yup": "^0.31.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/sharp": "^0.27.1",
     "@types/yup": "^0.29.9",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
