--- a/versions/4.4/package.json
+++ b/versions/4.4/package.json
@@ -2,8 +2,8 @@
   "name": "@dicebear/avatars-api-4.4",
   "version": "0.0.0",
   "private": true,
-  "author": "Florian Körner <contact@florian-koerner.com>",
   "license": "MIT",
+  "author": "Florian Körner <contact@florian-koerner.com>",
   "dependencies": {
     "@dicebear/avatars": "~4.4.0",
     "@dicebear/avatars-avataaars-sprites": "~4.4.0",
@@ -15,13 +15,13 @@
     "@dicebear/avatars-initials-sprites": "~4.4.0",
     "@dicebear/avatars-jdenticon-sprites": "~4.4.0",
     "@dicebear/avatars-male-sprites": "~4.4.0",
+    "@types/express": "^4.17.11",
+    "@types/yup": "^0.29.9",
     "express": "^4.17.1",
+    "typescript": "^4.1.2",
     "yup": "^0.31.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/yup": "^0.29.9",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.2"
+    "prettier": "^2.2.1"
   }
 }
