--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "dependencies": {
     "@dicebear/avatars-api-4.4": "*",
     "@dicebear/avatars-api-4.5": "*",
-    "@types/express": "^4.17.11",
     "axios": "^0.21.1",
-    "express": "^4.17.1",
+    "fastify": "^3.12.0",
+    "make-promises-safe": "^5.1.0",
+    "qs": "^6.9.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/qs": "^6.9.5",
     "prettier": "^2.2.1"
   }
 }
