--- a/versions/4.4/package.json
+++ b/versions/4.4/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "license": "MIT",
   "author": "Florian Körner <contact@florian-koerner.com>",
+  "scripts": {
+    "compile-schemas": "cd schemas && json2ts -i . -o ../types"
+  },
   "dependencies": {
     "@dicebear/avatars": "~4.4.0",
     "@dicebear/avatars-avataaars-sprites": "~4.4.0",
@@ -15,13 +18,12 @@
     "@dicebear/avatars-initials-sprites": "~4.4.0",
     "@dicebear/avatars-jdenticon-sprites": "~4.4.0",
     "@dicebear/avatars-male-sprites": "~4.4.0",
-    "@types/express": "^4.17.11",
-    "@types/yup": "^0.29.9",
-    "express": "^4.17.1",
-    "typescript": "^4.1.2",
-    "yup": "^0.31.0"
+    "@types/sharp": "^0.27.1",
+    "deepmerge": "^4.2.2",
+    "json-schema-to-typescript": "^10.1.3",
+    "sharp": "^0.27.1"
   },
-  "devDependencies": {
-    "prettier": "^2.2.1"
+  "peerDependencies": {
+    "fastify": "^3.12.0"
   }
 }
