--- a/versions/4.5/package.json
+++ b/versions/4.5/package.json
@@ -18,7 +18,9 @@
     "@dicebear/avatars-initials-sprites": "~4.5.0",
     "@dicebear/avatars-jdenticon-sprites": "~4.5.0",
     "@dicebear/avatars-male-sprites": "~4.5.0",
+    "@types/json-schema-merge-allof": "^0.6.0",
     "deepmerge": "^4.2.2",
+    "json-schema-merge-allof": "^0.8.1",
     "json-schema-to-typescript": "^10.1.3"
   },
   "peerDependencies": {
