Add: API Version 4.7

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@dicebear/avatars-api-4.4": "*",
     "@dicebear/avatars-api-4.5": "*",
     "@dicebear/avatars-api-4.6": "*",
+    "@dicebear/avatars-api-4.7": "*",
     "@types/qs": "^6.9.5",
     "axios": "^0.21.1",
     "fastify": "^3.12.0",
