--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@dicebear/avatars-api-4.7": "*",
     "@dicebear/avatars-api-4.8": "*",
     "@dicebear/avatars-api-4.9": "*",
+    "@dicebear/avatars-api-4.10": "*",
     "@types/qs": "^6.9.5",
     "axios": "^0.21.1",
     "fastify": "^3.12.0",
