--- a/.github/workflows/dokku-deploy.yml
+++ b/.github/workflows/dokku-deploy.yml
@@ -1,11 +1,14 @@
 ---
-name: 'deploy'
+name: 'Deploy to Prod'
 
 # yamllint disable-line rule:truthy
 on:
   push:
     branches:
       - main
+
+env:
+  DOKKU_REMOTE_URL: 'ssh://dokku@de01.net.dicebear.com:22/api'
 
 jobs:
   deploy:
@@ -19,5 +22,5 @@ jobs:
       - name: Push to dokku
         uses: dokku/github-action@master
         with:
-          git_remote_url: 'ssh://dokku@fra.dicebear-avatars.com:22/avatars'
+          git_remote_url: ${{ env.DOKKU_REMOTE_URL }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
