--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "ES2017",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
-  }
+  "extends": "@tsconfig/node16/tsconfig.json"
 }
