--- a/.github/workflows/dokku-deploy-v4.yml
+++ b/.github/workflows/dokku-deploy-v4.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   DOKKU_REMOTE_URL: 'ssh://dokku@de01.api.dicebear.com:22/app'
+  CDN_PULL_ZONE: 147563
 
 jobs:
   deploy:
@@ -24,3 +25,9 @@ jobs:
         with:
           git_remote_url: ${{ env.DOKKU_REMOTE_URL }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Purge CDN Cache
+      - run: >
+        curl --request POST \
+          --url https://api.bunny.net/pullzone/${{ env.CDN_PULL_ZONE }}/purgeCache \
+          --header 'AccessKey: ${{ secrets.CDN_ACCESS_KEY }}'
