--- a/.github/workflows/dokku-deploy-v5.yml
+++ b/.github/workflows/dokku-deploy-v5.yml
@@ -28,6 +28,6 @@ jobs:
 
       - name: Purge CDN Cache
         run: |
-          curl --request POST \\
-            --url https://api.bunny.net/pullzone/${{ env.CDN_PULL_ZONE }}/purgeCache \\
+          curl --request POST \
+            --url https://api.bunny.net/pullzone/${{ env.CDN_PULL_ZONE }}/purgeCache \
             --header 'AccessKey: ${{ secrets.CDN_ACCESS_KEY }}'
