--- a/package.json
+++ b/package.json
@@ -7,29 +7,28 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@dicebear/collection-4.10": "npm:@dicebear/collection@4.10",
-    "@dicebear/collection-4.7": "npm:@dicebear/collection@4.7",
-    "@dicebear/collection-4.8": "npm:@dicebear/collection@4.8",
-    "@dicebear/collection-4.9": "npm:@dicebear/collection@4.9",
-    "@dicebear/collection-5.0": "npm:@dicebear/collection@5.0.0-alpha.6",
-    "@dicebear/core-4.10": "npm:@dicebear/avatars@4.10",
-    "@dicebear/core-4.7": "npm:@dicebear/avatars@4.7",
-    "@dicebear/core-4.8": "npm:@dicebear/avatars@4.8",
-    "@dicebear/core-4.9": "npm:@dicebear/avatars@4.9",
-    "@dicebear/core-5.0": "npm:@dicebear/core@5.0.0-alpha.6",
+    "@dicebear/api-4.10": "file:./versions/4.10",
+    "@dicebear/api-4.4": "file:./versions/4.4",
+    "@dicebear/api-4.5": "file:./versions/4.5",
+    "@dicebear/api-4.6": "file:./versions/4.6",
+    "@dicebear/api-4.7": "file:./versions/4.7",
+    "@dicebear/api-4.8": "file:./versions/4.8",
+    "@dicebear/api-4.9": "file:./versions/4.9",
+    "@dicebear/api-5.0": "file:./versions/5.0",
     "@resvg/resvg-js": "^1.1.0",
     "@tsconfig/node16": "^1.0.2",
     "@types/json-schema": "^7.0.9",
     "@types/json-schema-merge-allof": "^0.6.1",
     "@types/node": "^16.11.7",
+    "@types/qs": "^6.9.7",
     "axios": "^0.24.0",
     "change-case": "^4.1.2",
+    "deepmerge": "^4.2.2",
     "fastify": "^3.24.0",
-    "fastify-swagger": "^4.12.6",
     "json-schema-merge-allof": "^0.8.1",
-    "query-string": "^7.0.1",
+    "qs": "^6.10.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
