--- a/.github/workflows/dokku-deploy.yml
+++ b/.github/workflows/dokku-deploy.yml
@@ -1,14 +1,14 @@
 ---
-name: 'Deploy to Prod (v4 - Legacy)'
+name: 'Deploy to Pull Server'
 
 # yamllint disable-line rule:truthy
 on:
   push:
     branches:
-      - '4.x'
+      - '5.x'
 
 env:
-  DOKKU_REMOTE_URL: 'ssh://dokku@de01.api.dicebear.com:22/app'
+  DOKKU_REMOTE_URL: 'ssh://dokku@pull.api.dicebear.com:22/app'
   CDN_PULL_ZONE: 147563
 
 jobs:
