--- a/.github/workflows/dokku-deploy.yml
+++ b/.github/workflows/dokku-deploy.yml
@@ -8,7 +8,7 @@ on:
       - 'main'
 
 env:
-  DOKKU_REMOTE_URL: 'ssh://dokku@pull.api.dicebear.com:22/app'
+  DOKKU_REMOTE_URL: 'ssh://dokku@de01.api.dicebear.com:22/app'
   CDN_PULL_ZONE: 147563
 
 jobs:
