--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
+		"module": "ES2020",
+    "target": "ES2019",
+		"moduleResolution": "node",
     "esModuleInterop": false
   }
 }
