--- a/versions/4.10/package.json
+++ b/versions/4.10/package.json
@@ -2,6 +2,7 @@
   "name": "@dicebear/api-4.10",
   "version": "1.0.0",
   "main": "index.ts",
+  "type": "module",
   "dependencies": {
     "@dicebear/avatars": "~4.10.2",
     "@dicebear/collection": "~4.10.2"
