--- a/versions/4.4/package.json
+++ b/versions/4.4/package.json
@@ -2,6 +2,7 @@
   "name": "@dicebear/api-4.4",
   "version": "1.0.0",
   "main": "index.ts",
+  "type": "module",
   "dependencies": {
     "@dicebear/avatars": "~4.4.0",
     "@dicebear/avatars-avataaars-sprites": "~4.4.0",
