--- a/versions/5.0/package.json
+++ b/versions/5.0/package.json
@@ -2,6 +2,7 @@
   "name": "@dicebear/api-5.0",
   "version": "1.0.0",
   "main": "index.ts",
+  "type": "module",
   "dependencies": {
     "@dicebear/core": "5.0.0-alpha.15",
     "@dicebear/collection": "5.0.0-alpha.15"
