Fix: Version 4.4 and 4.5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
   "compilerOptions": {
 		"module": "ES2020",
     "target": "ES2019",
-		"moduleResolution": "node",
-    "esModuleInterop": false
+		"moduleResolution": "node"
   }
 }
