--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Florian Körner <contact@florian-koerner.com>",
   "type": "module",
   "scripts": {
-    "start": "node --loader ts-node/esm src/index.ts"
+    "test": "tsc --noEmit",
+    "start": "node --loader ts-node/esm/transpile-only src/index.ts"
   },
   "dependencies": {
     "@dicebear/api-4.10": "file:./versions/4.10",
