Fix: Passing empty arrays

--- a/package.json
+++ b/package.json
@@ -21,18 +21,17 @@
     "@dicebear/api-5.0": "file:./versions/5.0",
     "@resvg/resvg-js": "^1.1.0",
     "@tsconfig/node16": "^1.0.2",
-    "@types/is-number": "^7.0.3",
     "@types/json-schema": "^7.0.9",
     "@types/json-schema-merge-allof": "^0.6.1",
     "@types/node": "^16.11.7",
     "@types/qs": "^6.9.7",
+    "ajv": "^8.11.0",
     "axios": "^0.24.0",
     "change-case": "^4.1.2",
     "deepmerge": "^4.2.2",
     "fastify": "^3.24.0",
-    "is-number": "^7.0.0",
     "json-schema-merge-allof": "^0.8.1",
-    "qs": "^6.10.1",
+    "query-string": "^7.1.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
