--- a/app/package.json
+++ b/app/package.json
@@ -19,9 +19,10 @@
     "@dicebear/api-4.8": "*",
     "@dicebear/api-4.9": "*",
     "@dicebear/api-5.0": "*",
-    "@dicebear/converter": "^5.0.0-alpha.24",
-    "@dicebear/core": "^5.0.0-alpha.24",
-    "@resvg/resvg-js": "^1.4.0",
+    "@dicebear/converter": "^5.0.0-alpha.30",
+    "@dicebear/core": "^5.0.0-alpha.30",
+    "@dicebear/collection": "^5.0.0-alpha.30",
+    "@resvg/resvg-js": "^2.0.0",
     "ajv": "^8.11.0",
     "axios": "^0.24.0",
     "change-case": "^4.1.2",
