--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "fastify": "^3.24.0",
     "json-schema-merge-allof": "^0.8.1",
     "query-string": "^7.1.1",
+    "sanitize-filename": "^1.6.3",
     "sharp": "^0.30.4",
     "ts-node": "^10.4.0"
   }
