--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "test": "npm run test:ts && npm run test:uvu",
     "test:ts": "tsc --noEmit",
     "test:uvu": "loadr -- uvu",
-    "start": "node --loader ts-node/esm/transpile-only src/index.ts"
+    "start": "ts-node --esm --transpile-only src/index.ts"
   },
   "dependencies": {
     "@dicebear/api-4.10": "*",
@@ -30,6 +30,6 @@
     "json-schema-merge-allof": "^0.8.1",
     "query-string": "^7.1.1",
     "sharp": "^0.30.4",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.9.1"
   }
 }
