--- a/.github/workflows/dokku-deploy.yml
+++ b/.github/workflows/dokku-deploy.yml
@@ -9,7 +9,7 @@ on:
       - completed
 
 env:
-  DOKKU_REMOTE_URL: 'ssh://dokku@pull.api.dicebear.com:22/dicebear'
+  DOKKU_REMOTE_URL: 'ssh://dokku@pull.api.dicebear.com:22/app'
   CDN_PULL_ZONE: 147563
 
 jobs:
