--- a/versions/5.0/package.json
+++ b/versions/5.0/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "type": "module",
   "dependencies": {
-    "@dicebear/core": "5.0.0-alpha.33",
-    "@dicebear/collection": "5.0.0-alpha.33"
+    "@dicebear/core": "^5.0.0",
+    "@dicebear/collection": "^5.0.0"
   },
   "private": true
 }
