--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,7 @@
     "@dicebear/api-4.8": "*",
     "@dicebear/api-4.9": "*",
     "@dicebear/api-5.0": "*",
-    "@dicebear/converter": "^5.0.0-alpha.30",
+    "@dicebear/converter": "^5.0.1",
     "@resvg/resvg-js": "^2.0.0",
     "ajv": "^8.11.0",
     "axios": "^0.24.0",
