--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,8 @@
     "@dicebear/api-4.8": "*",
     "@dicebear/api-4.9": "*",
     "@dicebear/api-5.0": "*",
+    "@dicebear/api-5.1": "*",
+    "@dicebear/api-5.2": "*",
     "@dicebear/converter": "^5.0.1",
     "@resvg/resvg-js": "^2.0.0",
     "ajv": "^8.11.0",
