--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@dicebear/api-5.0": "*",
     "@dicebear/api-5.1": "*",
     "@dicebear/api-5.2": "*",
+    "@dicebear/api-5.3": "*",
     "@dicebear/converter": "^5.0.1",
     "@resvg/resvg-js": "^2.0.0",
     "ajv": "^8.11.0",
