--- a/versions/5.1/package.json
+++ b/versions/5.1/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "type": "module",
   "dependencies": {
-    "@dicebear/core": "^5.1.6",
-    "@dicebear/collection": "^5.1.6"
+    "@dicebear/core": "~5.1.0",
+    "@dicebear/collection": "~5.1.0"
   },
   "private": true
 }
