--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,7 @@
     "@dicebear/api-5.2": "*",
     "@dicebear/api-5.3": "*",
     "@dicebear/converter": "^5.3.1",
-    "@resvg/resvg-js": "~2.3.0",
+    "@resvg/resvg-js": "^2.4.0",
     "ajv": "^8.11.0",
     "axios": "^0.24.0",
     "change-case": "^4.1.2",
