--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "@dicebear/api-5.1": "*",
     "@dicebear/api-5.2": "*",
     "@dicebear/api-5.3": "*",
+    "@dicebear/api-6.x": "*",
     "@dicebear/converter": "^5.3.1",
     "@resvg/resvg-js": "^2.4.0",
     "ajv": "^8.11.0",
