--- a/versions/6.x/package.json
+++ b/versions/6.x/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "type": "module",
   "dependencies": {
-    "@dicebear/core": "^6.0.0-beta.3",
-    "@dicebear/collection": "^6.0.0-beta.3"
+    "@dicebear/core": "^6.0.0",
+    "@dicebear/collection": "^6.0.0"
   },
   "private": true
 }
