--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "test": "npm run test:ts && npm run test:uvu",
     "test:ts": "tsc --noEmit",
     "test:uvu": "loadr -- uvu",
-    "start": "ts-node --esm --transpile-only src/index.ts"
+    "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts"
   },
   "dependencies": {
     "@dicebear/api-4.10": "*",
