--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,25 +3,19 @@ name: Test
 on:
   push:
     branches:
-      - 'main'
+      - '2.x'
   pull_request:
     branches:
-      - 'main'
+      - '2.x'
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: oven-sh/setup-bun@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - run: npm test
+          bun-version: 1
+      - run: bun install
+      - run: bun test
