--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
   "name": "root",
-  "private": true,
-  "workspaces": {
-    "packages": [
-      "app",
-      "versions/*"
-    ]
+  "module": "src/index.ts",
+  "type": "module",
+  "devDependencies": {
+    "bun-types": "^1.0.0"
   },
-  "scripts": {
-    "start": "npm start --workspace app",
-    "test": "npm run test --workspace app"
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@tsconfig/node16": "^1.0.2",
-    "@types/json-schema": "^7.0.9",
-    "@types/json-schema-merge-allof": "^0.6.1",
-    "@types/node": "^16.11.7",
-    "@types/qs": "^6.9.7",
-    "typescript": "^4.9.4"
-  },
-  "devDependencies": {
-    "loadr": "^0.1.1",
-    "prettier": "^2.4.1",
-    "uvu": "^0.5.3"
-  },
-  "engines": {
-    "node": ">=16.x"
+    "@dicebear/collection-5": "npm:@dicebear/collection@^5.0.0",
+    "@dicebear/collection-6": "npm:@dicebear/collection@^6.0.0",
+    "@dicebear/collection-7": "npm:@dicebear/collection@^7.0.0",
+    "@dicebear/core": "^7.0.0",
+    "@dicebear/core-5": "npm:@dicebear/core@^5.0.0",
+    "@dicebear/core-6": "npm:@dicebear/core@^6.0.0",
+    "@dicebear/core-7": "npm:@dicebear/core@^7.0.0"
   }
 }
