--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,19 +3,25 @@ name: Test
 on:
   push:
     branches:
-      - '2.x'
+      - 'main'
   pull_request:
     branches:
-      - '2.x'
+      - 'main'
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
       - uses: actions/checkout@v3
-      - uses: oven-sh/setup-bun@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          bun-version: 1
-      - run: bun install
-      - run: bun test
+          node-version: ${{ matrix.node-version }}
+      - run: npm install
+      - run: npm test
