--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "root",
+  "name": "@dicebear/api",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "app",
-      "versions/*"
-    ]
-  },
+  "license": "MIT",
+  "author": "Florian Körner <contact@florian-koerner.com>",
+  "type": "module",
   "scripts": {
-    "start": "npm start --workspace app",
-    "test": "npm run test --workspace app"
+    "dev": "tsx --watch ./src/index.ts",
+    "build": "tsc --build",
+    "start": "node ./dist/index.js",
+    "test": "node --test"
   },
   "dependencies": {
-    "@tsconfig/node16": "^1.0.2",
-    "@types/json-schema": "^7.0.9",
-    "@types/json-schema-merge-allof": "^0.6.1",
+    "@dicebear/collection-5": "npm:@dicebear/collection@^5.3.4",
+    "@dicebear/collection-6": "npm:@dicebear/collection@^6.0.4",
+    "@dicebear/collection-7": "npm:@dicebear/collection@^7.0.1",
+    "@dicebear/core": "^7.0.1",
+    "@dicebear/core-5": "npm:@dicebear/core@^5.3.4",
+    "@dicebear/core-6": "npm:@dicebear/core@^6.0.4",
+    "@dicebear/core-7": "npm:@dicebear/core@^7.0.1",
+    "@tsconfig/node18": "^1.0.2",
+    "@types/change-case": "^2.3.1",
+    "@types/json-schema": "^7.0.13",
     "@types/node": "^16.11.7",
     "@types/qs": "^6.9.7",
-    "typescript": "^4.9.4"
+    "change-case": "^5.0.2",
+    "fastify": "^4.23.2",
+    "qs": "^6.11.2",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "loadr": "^0.1.1",
     "prettier": "^2.4.1",
-    "uvu": "^0.5.3"
+    "tsx": "^3.13.0"
   },
   "engines": {
-    "node": ">=16.x"
+    "node": ">=18.0.0"
   }
 }
