--- a/package.json
+++ b/package.json
@@ -14,23 +14,26 @@
     "@dicebear/collection-5": "npm:@dicebear/collection@^5.3.4",
     "@dicebear/collection-6": "npm:@dicebear/collection@^6.0.4",
     "@dicebear/collection-7": "npm:@dicebear/collection@^7.0.1",
-    "@dicebear/core": "^7.0.1",
     "@dicebear/core-5": "npm:@dicebear/core@^5.3.4",
     "@dicebear/core-6": "npm:@dicebear/core@^6.0.4",
     "@dicebear/core-7": "npm:@dicebear/core@^7.0.1",
+    "@resvg/resvg-js": "^2.4.1",
+    "change-case": "^5.0.2",
+    "exiftool-vendored": "^23.3.0",
+    "fastify": "^4.23.2",
+    "qs": "^6.11.2",
+    "sharp": "^0.32.6"
+  },
+  "devDependencies": {
+    "@dicebear/core": "^7.0.1",
     "@tsconfig/node18": "^1.0.2",
     "@types/change-case": "^2.3.1",
     "@types/json-schema": "^7.0.13",
     "@types/node": "^16.11.7",
-    "@types/qs": "^6.9.7",
-    "change-case": "^5.0.2",
-    "fastify": "^4.23.2",
-    "qs": "^6.11.2",
-    "typescript": "^5.2.2"
-  },
-  "devDependencies": {
+    "@types/qs": "^6.9.8",
     "prettier": "^2.4.1",
-    "tsx": "^3.13.0"
+    "tsx": "^3.13.0",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
